--- a/rutan.html
+++ b/rutan.html
@@ -223,7 +223,8 @@
 	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
     <p class = "intro">Det finns många rutor i världen: fönsterrutor, schackrutor, magrutor, rökrutor och vaccinsprutor. Den här rutan gör inga sådana anspråk men om vi får ge ett råd: stanna en stund, läs lite, eller skriv något. Våga bli inrutad.</p>
 	<div id = "rutan_hållare" class = "holder"></div>
-      
+	<p class = "intro">Skriv till rutan: <a href = "mailto:gaffel.magasin+rutan@gmail.com">mejl</a></p>
+		
 	  <script>
 		function detectMob() {
 		    const toMatch = [
