--- a/rutan.html
+++ b/rutan.html
@@ -205,8 +205,11 @@
 			text-align: center;
 			margin: auto;
 			margin-bottom: 20px;
+			
 		}
-		
+		a{
+			color: black;
+		}
         </style>
     </head>
     <body>
@@ -223,7 +226,7 @@
 	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
     <p class = "intro">Det finns många rutor i världen: fönsterrutor, schackrutor, magrutor, rökrutor och vaccinsprutor. Den här rutan gör inga sådana anspråk men om vi får ge ett råd: stanna en stund, läs lite, eller skriv något. Våga bli inrutad.</p>
 	<div id = "rutan_hållare" class = "holder"></div>
-	<p class = "intro">Skriv till rutan: <a href = "mailto:gaffel.magasin+rutan@gmail.com">gaffel.magasin+rutan@gmail.com</a><br>Ska det vara titel och/eller signatur kan det vara en idé att nämna dem.</p>
+	<p class = "intro" style = "margin-bottom: 30px;">Skriv till rutan: <a href = "mailto:gaffel.magasin+rutan@gmail.com">gaffel.magasin+rutan@gmail.com</a><br>Ska det vara titel och/eller signatur kan det vara en idé att nämna dem.</p>
 		
 	  <script>
 		function detectMob() {
