--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@
 					</img>`
 		}
 		else{
-			//new_html += 	`<video autoplay muted loop style = "width: 100%; float: right; background: black; webkit-playsinline;">
-				//		<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
-					//</video>`
-			new_html += `<img src =  "bilder/gaffel_i_värld_kvadrat.png"
-					style = "width: 100%;">
-					</img>`
+			new_html += 	`<video autoplay muted loop playsinline style = "width: 100%; float: right; background: black;">
+						<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
+					</video>`
+			//new_html += `<img src =  "bilder/gaffel_i_värld_kvadrat.png"
+					//style = "width: 100%;">
+					//</img>`
 		}
 		
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
