--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 					</img>`
 		}
 		else{
-			new_html += 	`<video autoplay muted loop playsinline style = "width: 100%; float: right; background: black;">
+			new_html += 	`<video loop autoplay muted playsinline style = "width: 100%; float: right; background: black;">
 						<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
 					</video>`
 			//new_html += `<img src =  "bilder/gaffel_i_värld_kvadrat.png"
