--- a/index.html
+++ b/index.html
@@ -351,12 +351,22 @@
 					</img>`
 		}
 		else{
-			new_html += 	`<video loop autoplay muted playsinline style = "width: 100%; float: right; background: black;">
+			new_html += 	`<video loop autoplay muted playsinline id = "vid" style = "width: 100%; float: right; background: black;">
 						<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
 					</video>`
-			//new_html += `<img src =  "bilder/gaffel_i_värld_kvadrat.png"
-					//style = "width: 100%;">
-					//</img>`
+					const vid = document.getElementById('video');
+					vid.get(0)
+					.play()
+					.then(() => {})
+					.catch((error) => {
+					    $('#video').css('display', 'none');
+
+						new_html += `<img src =  "bilder/gaffel_i_värld_kvadrat.png"
+						style = "width: 100%;">
+						</img>`
+					});
+			
+			
 		}
 		
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
