--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 			new_html += 	`<video loop autoplay muted playsinline id = "vid" style = "width: 100%; float: right; background: black;">
 						<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
 					</video>`
-					const vid = document.getElementById('video');
+					const vid = document.getElementById('vid');
 					vid.get(0)
 					.play()
 					.then(() => {})
