--- a/index.html
+++ b/index.html
@@ -354,17 +354,12 @@
 			new_html += 	`<video loop autoplay muted playsinline id = "vid" style = "width: 100%; float: right; background: black;">
 						<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
 					</video>`
-					const vid = document.getElementById('vid');
-					vid.get(0)
-					.play()
-					.then(() => {})
-					.catch((error) => {
-					    $('#video').css('display', 'none');
 
-						new_html += `<img src =  "bilder/gaffel_i_värld_kvadrat.png"
-						style = "width: 100%;">
-						</img>`
-					});
+
+						//new_html += `<img src =  "bilder/gaffel_i_värld_kvadrat.png"
+						//style = "width: 100%;">
+						//</img>`
+					
 			
 			
 		}
