--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 			
 			
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/plåstra-om-indiebanden',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/int-pascal',isMobile)</script></div>
 			
 
 			<div style = "background: black; width: 100%;">
@@ -390,10 +390,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main90'><script>draw_article_button('main90','2025/int-pascal',isMobile)</script></div>
 			<div id = 'main89'><script>draw_article_button('main89','2025/plåstra-om-indiebanden',isMobile)</script></div>
-			<div id = 'main88'><script>draw_article_button('main88','2025/borås-tur-och-retur',isMobile)</script></div>
-			<div id = 'main87'><script>draw_article_button('main87','2025/recension-vasas',isMobile)</script></div>	
-			
+			<div id = 'main88'><script>draw_article_button('main88','2025/borås-tur-och-retur',isMobile)</script></div>			
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
 			<div id = 'cos'><script>draw_article_button('cos','2025/cos-näktergal-på-lokal',isMobile)</script></div>
@@ -407,6 +406,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main87'><script>draw_article_button('main87','2025/recension-vasas',isMobile)</script></div>	
 			<div id = 'main86'><script>draw_article_button('main86','2025/den-moderna-människans-nattklubb',isMobile)</script></div>
 			<div id = 'main85'><script>draw_article_button('main85','2025/doom-metal',isMobile)</script></div>
 			<div id = 'main84'><script>draw_article_button('main84','2025/ballad-om-en-axelremsväska',isMobile)</script></div>
