--- a/artikel.html
+++ b/artikel.html
@@ -154,6 +154,7 @@
                   padding-top: 3%;
                   margin-left: 5%;    
                   margin-right: 5%; 
+				  hyphens: manual;
             }
 	    .foto{
 		  font-family: Atkinson-Bold;
