--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 			
 			
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/int-pascal',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/plåstra-om-indiebanden',isMobile)</script></div>
 			
 
 			<div style = "background: black; width: 100%;">
@@ -390,7 +390,6 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<div id = 'main90'><script>draw_article_button('main90','2025/int-pascal',isMobile)</script></div>
 			<div id = 'main89'><script>draw_article_button('main89','2025/plåstra-om-indiebanden',isMobile)</script></div>
 			<div id = 'main88'><script>draw_article_button('main88','2025/borås-tur-och-retur',isMobile)</script></div>			
 			
