--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id="reklam_banner"></div>
+			<!--<div id="reklam_banner"></div>
 			<script>
 			var new_html = `<a href = "https://forms.gle/LZH2uBoxpxgrg9Hi9">`
 			
@@ -319,7 +319,7 @@
 			}
 			new_html += "</a>"
 			document.getElementById("reklam_banner").innerHTML = new_html;
-			</script>
+			</script>-->
 			
 			
 			
