--- a/postorder.html
+++ b/postorder.html
@@ -48,9 +48,10 @@
 	<div w3-include-html="header.html"></div>
 	<script>w3.includeHTML();</script>
 	
-	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
-    <p class = "intro">Det finns många rutor i världen: fönsterrutor, schackrutor, magrutor, rökrutor och vaccinsprutor. Den här rutan gör inga sådana anspråk men om vi får ge ett råd: stanna en stund, läs lite, eller skriv något. Våga bli inrutad.</p>
-	<p class = "intro" style = "margin-bottom: 100px;">Skriv till rutan: <a href = "mailto:gaffel.magasin+rutan@gmail.com">gaffel.magasin+rutan@gmail.com</a><br>Ska det vara titel och/eller signatur kan det vara en idé att nämna dem.</p>
+	<img src = "bilder/postorder.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
+    <p class = "intro">Detta är Gaffels postorderbutik.</p>
+	<p class = "intro">Köp <i>Welcome to Paradise</i>, ett nummer om Sveriges enda stad (Stockholm). Efter de totala fiaskon som releasefesterna utgjorde har vi massor av magasin kvar som vi vill hinna bli av med innan de ruttnar.</p>
+	<p class = "intro" style = "margin-bottom: 100px;">Beställ: Swisha 90 kr (60 kr + 20 kr frakt) till 0703-67-64-26 och mejla namn och adress till <a href = "mailto:gaffel.magasin+rutan@gmail.com">gaffel.magasin+rutan@gmail.com</a></p>
 		
 
     </body>
