--- a/postorder.html
+++ b/postorder.html
@@ -29,11 +29,10 @@
 		.intro{
 			color: white;
 			font-family: Georgia;
-			font-style: oblique;
 			width: clamp(0px,90vw,400px);
 			text-align: center;
 			margin: auto;
-			margin-bottom: 20px;
+			margin-top: 20px;
 			
 		}
 		a{
@@ -48,10 +47,10 @@
 	<div w3-include-html="header.html"></div>
 	<script>w3.includeHTML();</script>
 	
-	<img src = "bilder/postorder.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
+	<img src = "bilder/postorder.webp" style = "width: clamp(10px, 100%, 1000px); height: auto; display: block; margin: auto;"></img>
     <p class = "intro">Detta är Gaffels postorderbutik.</p>
 	<p class = "intro">Köp <i>Welcome to Paradise</i>, ett nummer om Sveriges enda stad (Stockholm). Efter de totala fiaskon som releasefesterna utgjorde har vi massor av magasin kvar som vi vill hinna bli av med innan de ruttnar.</p>
-	<p class = "intro" style = "margin-bottom: 100px;">Beställ: Swisha 90 kr (60 kr + 20 kr frakt) till 0703-67-64-26 och mejla namn och adress till <a href = "mailto:gaffel.magasin+rutan@gmail.com">gaffel.magasin+rutan@gmail.com</a></p>
+	<p class = "intro" style = "margin-bottom: 100px;">Beställ: Swisha 80 kr (60 kr + 20 kr frakt) till <br>0703-67-64-26 och mejla namn och adress till <a href = "mailto:gaffel.magasin@gmail.com">gaffel.magasin@gmail.com</a></p>
 		
 
     </body>
