--- a/postorder.html
+++ b/postorder.html
@@ -49,7 +49,8 @@
 	
 	<img src = "bilder/postorder.webp" style = "width: clamp(10px, 100%, 1000px); height: auto; display: block; margin: auto;"></img>
     <p class = "intro">Detta är Gaffels postorderbutik.</p>
-	<p class = "intro">Köp <i>Welcome to Paradise</i>, ett nummer om Sveriges enda stad (Stockholm). Efter de totala fiaskon som releasefesterna utgjorde har vi massor av magasin kvar som vi vill hinna bli av med innan de ruttnar.</p>
+	<img src = "https://i.imgur.com/67YmEu6.png" style = "width: clamp(10px, 100%, 1000px); height: auto; display: block; margin: auto; margin-top: 20px;"></img>
+	<p class = "intro">You wanted a hit, but baby we don't do hits, tvärtom sålde vi ganska dåligt. Köp <i>Welcome to Paradise</i>, ett nummer om Sveriges enda stad (Stockholm) innan alla magasinen hinner ruttna.</p>
 	<p class = "intro" style = "margin-bottom: 100px;">Beställ: Swisha 80 kr (60 kr + 20 kr frakt) till <br>0703-67-64-26 och mejla namn och adress till <a href = "mailto:gaffel.magasin@gmail.com">gaffel.magasin@gmail.com</a></p>
 		
 
