--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<img src = "bilder/logga_morf_vit.png" class = gaffel_logga_bild></img>
-			<p id = 'slogan'">sveriges farligaste popkulturmagasin</p>
+			<img src = "bilder/gaffel_logga_2" class = gaffel_logga_bild></img>
+			<p id = "slogan" style = "color: black;">sveriges farligaste popkulturmagasin</p>
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','med flit','är du farlig?','din kajplats i etern','gonzo','felrättsnetthelträttsnett'];
 				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
