--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
 	<div class = banner>
 		<div class = gaffel_logga>
-			<img src = "bilder/gaffel_logga_2" class = gaffel_logga_bild></img>
+			<img src = "bilder/gaffel_logga_2.png" class = gaffel_logga_bild></img>
 			<p id = "slogan" style = "color: black;">sveriges farligaste popkulturmagasin</p>
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','med flit','är du farlig?','din kajplats i etern','gonzo','felrättsnetthelträttsnett'];
