--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 	<div class = banner>
 		<div class = gaffel_logga>
 			<img src = "bilder/gaffel_logga_2.png" class = gaffel_logga_bild></img>
-			<p id = "slogan" style = "color: black; margin-top: 0px;">sveriges farligaste popkulturmagasin</p>
+			<p id = "slogan" style = "margin-top: 0px;">sveriges farligaste popkulturmagasin</p>
 			<script>
 				var slogan_array = ['sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','sveriges farligaste popkulturmagasin','med flit','är du farlig?','din kajplats i etern','gonzo','felrättsnetthelträttsnett'];
 				var ny_slogan = slogan_array[Math.floor(Math.random()*slogan_array.length)];
