--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main93'><script>draw_article_button('main93','2025/bruce-springsteen',isMobile)</script></div>
 			<div id = 'main92'><script>draw_article_button('main92','2025/int-fred-soila',isMobile)</script></div>
 			<div id = 'main91'><script>draw_article_button('main91','2025/slam-poetry',isMobile)</script></div>
-			<div id = 'main90'><script>draw_article_button('main90','2025/int-pascal',isMobile)</script></div>
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
 			<div id = 'cos'><script>draw_article_button('cos','2025/cos-näktergal-på-lokal',isMobile)</script></div>
@@ -406,6 +406,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main90'><script>draw_article_button('main90','2025/int-pascal',isMobile)</script></div>
 			<div id = 'main89'><script>draw_article_button('main89','2025/plåstra-om-indiebanden',isMobile)</script></div>	
 			<div id = 'main88'><script>draw_article_button('main88','2025/borås-tur-och-retur',isMobile)</script></div>		
 			<div id = 'main87'><script>draw_article_button('main87','2025/recension-vasas',isMobile)</script></div>	
