--- a/header.html
+++ b/header.html
@@ -100,6 +100,7 @@
 		<a class = "navlink" href="/">HEM</a>
 		<!--<a class = "navlink" href="/drakens-värld">DRAKENS VÄRLD</a>-->
 		<a class = "navlink" href="/hemliga-klubben-inlogg">HEMLIGT</a>
+		<a class = "navlink" href="/postorder">POSTORDER</a>
 	</div>
 
 	<div class = right_div>
