--- a/index.html
+++ b/index.html
@@ -302,24 +302,24 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<!--<div id="reklam_banner"></div>
+			<div id="reklam_banner"></div>
 			<script>
-			var new_html = `<a href = "https://forms.gle/LZH2uBoxpxgrg9Hi9">`
+			var new_html = `<a href = "/postorder">`
 			
 			new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
 			if(isMobile == false){
-				new_html += 	`<img src =  "https://i.imgur.com/Zxj9dUU.png"
+				new_html += 	`<img src =  "https://i.imgur.com/xZhBsYY.png"
 						style = "width: 100%; float: right;">
 						</img>`
 			}
 			else{
-				new_html += 	`<img src =  "https://i.imgur.com/8VcKuKV.png"
+				new_html += 	`<img src =  "https://i.imgur.com/0mDoC0B.png"
 						style = "width: 100%; float: right; background: black;">
 						</img>`
 			}
 			new_html += "</a>"
 			document.getElementById("reklam_banner").innerHTML = new_html;
-			</script>-->
+			</script>
 			
 			
 			
