--- a/index.html
+++ b/index.html
@@ -302,28 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id="reklam_banner"></div>
-			<script>
-			var new_html = `<a href = "/postorder">`
-			
-			new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
-			if(isMobile == false){
-				new_html += 	`<img src =  "https://i.imgur.com/xZhBsYY.png"
-						style = "width: 100%; float: right;">
-						</img>`
-			}
-			else{
-				new_html += 	`<img src =  "https://i.imgur.com/0mDoC0B.png"
-						style = "width: 100%; float: right; background: black;">
-						</img>`
-			}
-			new_html += "</a>"
-			document.getElementById("reklam_banner").innerHTML = new_html;
-			</script>
-			
-			
-			
-			
+
 			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/int-fred-soila',isMobile)</script></div>
 			
 
@@ -390,9 +369,28 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main94'><script>draw_article_button('main94','2025/work-wear-fiction',isMobile)</script></div>
 			<div id = 'main93'><script>draw_article_button('main93','2025/bruce-springsteen',isMobile)</script></div>
-			<div id = 'main92'><script>draw_article_button('main92','2025/int-fred-soila',isMobile)</script></div>
-			<div id = 'main91'><script>draw_article_button('main91','2025/slam-poetry',isMobile)</script></div>
+			<div id = 'main92'><script>draw_article_button('main92','2025/int-fred-soila',isMobile)</script></div>	
+
+			<div id="reklam_banner"></div>
+			<script>
+			var new_html = `<a href = "/postorder">`
+			
+			new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
+			if(isMobile == false){
+				new_html += 	`<img src =  "https://i.imgur.com/xZhBsYY.png"
+						style = "width: 100%; float: right;">
+						</img>`
+			}
+			else{
+				new_html += 	`<img src =  "https://i.imgur.com/0mDoC0B.png"
+						style = "width: 100%; float: right; background: black;">
+						</img>`
+			}
+			new_html += "</a>"
+			document.getElementById("reklam_banner").innerHTML = new_html;
+			</script>
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
 			<div id = 'cos'><script>draw_article_button('cos','2025/cos-näktergal-på-lokal',isMobile)</script></div>
@@ -406,6 +404,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main91'><script>draw_article_button('main91','2025/slam-poetry',isMobile)</script></div>
 			<div id = 'main90'><script>draw_article_button('main90','2025/int-pascal',isMobile)</script></div>
 			<div id = 'main89'><script>draw_article_button('main89','2025/plåstra-om-indiebanden',isMobile)</script></div>	
 			<div id = 'main88'><script>draw_article_button('main88','2025/borås-tur-och-retur',isMobile)</script></div>		
