--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main95'><script>draw_article_button('main95','2025/uppesittarkväll-på-göteborgs-central',isMobile)</script></div>
 			<div id = 'main94'><script>draw_article_button('main94','2025/work-wear-fiction',isMobile)</script></div>
 			<div id = 'main93'><script>draw_article_button('main93','2025/bruce-springsteen',isMobile)</script></div>
-			<div id = 'main92'><script>draw_article_button('main92','2025/int-fred-soila',isMobile)</script></div>	
 
 			<div id="reklam_banner"></div>
 			<script>
@@ -404,6 +404,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main92'><script>draw_article_button('main92','2025/int-fred-soila',isMobile)</script></div>	
 			<div id = 'main91'><script>draw_article_button('main91','2025/slam-poetry',isMobile)</script></div>
 			<div id = 'main90'><script>draw_article_button('main90','2025/int-pascal',isMobile)</script></div>
 			<div id = 'main89'><script>draw_article_button('main89','2025/plåstra-om-indiebanden',isMobile)</script></div>	
