--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -7,12 +7,22 @@
 	<title>TAROTMASKINEN</title>
         
 	<style>
+		@font-face {
+		  font-family: legaff;
+		  src: url(font/Legaff-Regular.otf) format("opentype");
+		}
+		
+		 @font-face {
+		  font-family: Atkinson-Bold;
+		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+		}
+
 		
 	    body { 
 
                 background-color: black;
 
-            	     	margin: 0px;
+            	   margin: 0px;
             		padding: 0px;
             		max-width: 100vw !important;
             		overflow-x: hidden !important;
@@ -123,7 +133,7 @@
 		  padding: 10px 18px;
 		  text-align: center;
 		  text-decoration: none;
-		  font-family: helvetica_bold;
+		  font-family: Atkinson-Bold;
 		  font-size: 1em;
 		  font-weight: bold;
 		  margin-top: 0px;
@@ -178,10 +188,10 @@
 	      <div class="scene scene--card">
               <div class="card">
                 <div class="card__face card__face--front" id="cf">
-                    <img src = "/bilder/tarot/tarot_bakgrund.png" class = "kort"></img>    
+                    <img src = "/bilder/tarot-2026/baksida" class = "kort"></img>    
                 </div>
                 <div class="card__face card__face--back" id="cb">
-                    <img src = "/bilder/tarot/tarot_bakgrund.png" class = "kort" id = "k"></img> 
+                    <img src = "/bilder/tarot-2026/baksida" class = "kort" id = "k"></img> 
                 </div>
               </div>
             </div>
@@ -199,7 +209,7 @@
 
             var flip = false;
 
-            bild = ["narren","magikern","påverskan","kejsarinnan","kejsaren","påven","de älskande","vagnen","justitia","eremiten","lyckans hjul","styrkan","den hängde","döden","måttfullhet","djävulen","plutus","stjärnan","månen","solen","yttersta domen","världen"]
+            bild = ["narren","magikern","påverskan","juno","jupiter","påven","de älskande","vagnen","justitia","eremiten","lyckans hjul","styrkan","den hängde","döden","måttfullhet","djävulen","plutus","stjärnan","månen","solen","yttersta domen","världen"]
 
 	    text = [
 		    "I ditt öde står skrattet skrivet. Du kommer att börja med riktigt hack ståupp. Ditt set består av ytlig igenkänningshumor, publiksnack som gör folk obekväma, skillnader mellan tjejer och killar samt bomba på Big Ben.",
@@ -251,7 +261,7 @@
                       
                       document.getElementById("text").innerHTML = t;
 		      document.getElementById("råd").innerHTML = "Gör: " + g + "<br>" + "Undvik: " + u;
-                      document.getElementById("k").src = "/bilder/tarot/" + b + ".png";
+                      document.getElementById("k").src = "/bilder/tarot-2026/" + b + ".png";
                   }
               });
             });
