--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -208,7 +208,7 @@
 
             var flip = false;
 
-            bild = ["narren","magikern","påverskan","juno","jupiter","påven","de älskande","vagnen","justitia","eremiten","lyckans hjul","styrkan","den hängde","döden","måttfullhet","djävulen","plutus","stjärnan","månen","solen","yttersta domen","världen"]
+            bild = ["narren","magikern","påverskan","juno","jupiter","påven","de älskande","vagnen","justitia","eremiten","lyckans hjul","styrkan","den hängde","döden","måttfullheten","djävulen","plutus","stjärnan","månen","solen","yttersta domen","världen"]
 
 	    text = [
 		    "I ditt öde står skrattet skrivet. Du kommer att börja med riktigt hack ståupp. Ditt set består av ytlig igenkänningshumor, publiksnack som gör folk obekväma, skillnader mellan tjejer och killar samt bomba på Big Ben.",
