--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -49,12 +49,12 @@
 		    text-align: center;
 		    font-family: Georgia;
 		    font-size: 1em;
-		    color: white;
+		    color: #FFB700FF;
 		    margin-bottom: 20px;
 	    }
 		
 	    .beskrivning{
-		    color: white;
+		    color: #FFB700FF;
 		    opacity: 0;
 		    vertical-align: middle;
 		    font-family: Georgia;
@@ -126,7 +126,7 @@
 
 		button {
 		  display: block;
-		  background-color: white;
+		  background-color: #FFB700FF;
 		  border: none;
 		  color: black;
 		  padding: 10px 18px;
