--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -63,6 +63,9 @@
 		    margin-top: 30px;
 		    margin-bottom: 25px;
 	    }
+		a{
+			color: #FFB700FF;
+		}
 
 	     .beskrivning.is-flipped{
 		    animation: fadeIn 2s;
@@ -183,7 +186,7 @@
 	</script>
 	    
         <div class = "framer">
-            <p class = "intr">Framför dig har du en maskin som kan spå hur ditt 2025 kommer att bli. Det är bara att klicka på kortet, är man inte nöjd kan man klicka igen.</p>
+            <p class = "intr">Framför dig har du en maskin som kan spå hur ditt 2026 kommer att bli. Det är bara att klicka på kortet, är man inte nöjd kan man klicka igen. Om du glömt bort hur ditt 2025 var kan du göra <a href = "tarot">förra årets tarotmaskin</a></p>
 	      <div class="scene scene--card">
               <div class="card">
                 <div class="card__face card__face--front" id="cf">
