Add text alignment to .beskrivning class

--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -55,7 +55,8 @@
 		
 	    .beskrivning{
 		    color: #FFB700FF;
-		    opacity: 0;
+			opacity: 0;
+			text-align: center;
 		    vertical-align: middle;
 		    font-family: Georgia;
 		    font-size: 1em;
