--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -199,7 +199,7 @@
               </div>
             </div>
 	    <p id= "text" class = "beskrivning">ooooooooooooooooooooooooooo</p>
-	    <p id = "råd" class = "beskrivning" style = "font-size: 0.9em;">Gör: <br> Undvik:</p>
+	    <p id = "råd" class = "beskrivning" style = "font-size: 0.9em; margin-top: 0px;">Gör: <br> Undvik:</p>
 	    <button id = "knapp">tell your friends</button>
 	    <br><br>
         </div>
