--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -181,7 +181,7 @@
 		var isMobile = detectMob();
 		if(isMobile){
 
-                      document.getElementById("banner").src = "/bilder/tarot/tarot banner mobil.png";
+                      document.getElementById("banner").src = "/bilder/tarot-2026/tarot logga mobil.webp";
                   }
 		
 	</script>
