--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
 
 	<meta charset="UTF-8">
@@ -51,6 +51,7 @@
 		    font-size: 1em;
 		    color: #FFB700FF;
 		    margin-bottom: 20px;
+			hyphens: auto;
 	    }
 		
 	    .beskrivning{
@@ -63,6 +64,7 @@
 		    font-size: 1.1em;
 		    margin-top: 40px;
 		    margin-bottom: 40px;
+			hyphens: auto;
 	    }
 		a{
 			color: #FFB700FF;
