--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -242,51 +242,51 @@
 		    "Du kommer att resa tillbaka i tiden och uppfinna stroganoffen innan Greve Stroganoff ens hunnit ta ut korven från kylen. När du återvänder till samtiden visar det sig genom kausalitetens mystik att bebis-Hitler dödade sig själv. Skönt.",
 		    "Det kittlar smått i magen, så där som du minns dagistidens alla gungor. Du svävar fritt utanför kapseln, hundra tusen kilometer under dig brer still havet ut sig i en ändlös blåhet, blott fläckad av små lätta moln. Åt höger, vänster, fram, bak och upp syns endast rymdens svarta tomhet. Vår planet. En bland miljarders miljarder men den enda med liv, än så länge. Det är svårt att inte få svindel av skönhetens tyngd men du måste fokusera nu, rymdfarkoster lagar inte sig själva. “Bzzzzzzzz, this is ground control”, “Vad är det?”, “Good luck out there, son”."
 	    ]
-	    gör = ["Dikter, Mössor, Längdskidor",
-			   "Gråzoner, Karaoke, Räddningstjänster",
-			   "Virkning, paradoxer, Science Fiction",
-			   "Popmusik, Keps på sniskan, Utombordare",
-			   "Navelskådning, Vykort, Brädspel",
-			   "Hela havet stormar, Solglasögon, Tjejcigg",
-			   "Armhävningar, Fåraherdning, Gavel",
-			   "Stunts, Ekolokalisering, Fonetik",
-			   "Dockskåp, Allitteration, Husgeråd",
-			   "Parafrasering, Avslut, Djurgården",
-			   "Sparbössa, Nässprej, Plastväxter",
-			   "Förflyttningar, The Wire, Soppa",
-			   "Ingenting, Vykort, Saltstänk",
-			   "Göteborgskoloristerna, K-märkning, Bokstaven Q",
-			   "Provskytte, Uppklarning, Gåshud",
-			   "Pärmar, Glömska, Parkbänkar",
-			   "Östblock, Kobingo, Saft",
-			   "Påhopp, Avledningar, Hanna Hellquist",
-			   "Mirakel, Femtedelar, Utomhus",
-			   "Påverkan, ℅, Misär",
-			   "PQ-formeln, Fraktionsbildning, Återvinning",
-			   "Gå hem, Sidospår, Listor"]
+	    gör = ["Harjakt, glidningar, dunkar.",
+			   "Maskeringstejp, konstpaus, korsförhör.",
+			   "APA-manualen, kors i taket, Kronoberg.",
+			   "Vernissage, midissage, finissage.",
+			   "Himla, sommarkatt, skumbad.",
+			   "Svartsoppa, pinsamheter, grosshandel.",
+			   "Sju sorters kakor, radio, kosläpp.",
+			   "Heja blåvitt, kunskapsluckor, hägringar.",
+			   "Bestånd, avgöranden, statistik.",
+			   "Rebusar, armétält, fakirer.",
+			   "Semikolon, vittnesed, mästringar.",
+			   "Passerkort, AM/FM, prydnadsskedar.",
+			   "Hoppa hage, litteraturlistor, trav.",
+			   "Rokoko, spritfest, kväden.",
+			   "Rapphöns, fällben, huvudstupa.",
+			   "Ad hominem, kulturrundor, Petra Mede.",
+			   "Rutnät, klimatanläggningar, navkapslar.",
+			   "Fågel, fisk, mittemellan.",
+			   "Jäv, escape room, omtagning.",
+			   "OSA, kåldolmar, kåtor.",
+			   "Kokböcker, vänskap, oxkind.",
+			   "Furstbiskop, persona, permission."]
 	    
-		undvik = ["Hängmattor, Crème brulé, Mönster",
-				  "Korsdrag, Sockor, Ekobrott",
-				  "Mannagryn, Sjuhäradsbygden, P3",
-				  "Krigsspel, Öresund, Personliga attacker",
-				  "Byfånar, Temakortlekar, Jonatan Unge",
-				  "Nöjesfält, Handstöpta ljus, Norrlands guld",
-				  "Lantmäteri, Antika Egypten, Gudsförnekelse",
-				  "Nagelfarande, Konstrundor, Spa",
-				  "Proppskåp, Serietidningar, Dimma",
-				  "Katakeser, Mörkläggning, Gåtor",
-				  "Huvud, Axlar, Knän & Tår",
-				  "Instagram, Matkedjor, Morgondagen",
-				  "Morsning korsning, Huvudvärk, Snabel-A",
-				  "Kväden, Mys, Lovisa",
-				  "Kommerser, Krukmakare, Sangviniker",
-				  "Den gråa hjärnsubstansen, Kolavippen, Kåseri",
-				  "Sommelier, Tungotal, Märkligheter",
-				  "Analysandar, Sandlådor, Brevinkast",
-				  "A-aktier, Gråterskor, Möjligheter",
-				  "Undvikning, Containerdykning, Låsdyrkning",
-				  "Komplikationer, Återföreningar, Övertid",
-				  "Tarotkort, Hemsidor, Popkulturmagasin"]
+		undvik = ["Automatväxel, höstdagjämning, sju.",
+				  "Värk, generation Y, besvär.",
+				  "JMK, statyetter, ordstäv.",
+				  "Råttkungar, ögonstenar, kronvittnen.",
+				  "Mission Impossible, engångskamera, lgh-nummer.",
+				  "Physalis, !, frikadeller",
+				  "Hämndlystnad, Loka, ikoner.",
+				  "Södertörn, högskola, filosofi.",
+				  "David Druid, engångskameror, ormar.",
+				  "Stoiker, månsing, detaljplaner.",
+				  "Fästingar, ekfanér, nyckelband.",
+				  "TV4, häxjakt, smyckesskrin.",
+				  "Haga, rhododendron, vågskålar.",
+				  "Dräpande kritik, galjonsfigurer, zeitgeist.",
+				  "Önsketänkande, fattigadeln, stenciler.",
+				  "Yrkesetik, bestick, lösören.",
+				  "Dragkedjor, Nils Svensson (tidigare van der Poel), vitsigheter.",
+				  "Klåpare, Bråkmakargatan, fantasi.",
+				  "Osymmetri, Frutti di mare, kolja.",
+				  "Tredagarsstubb, delikatesser, anglicismer.",
+				  "Carola, hunddagis, permanenta.",
+				  "Bindestreck, kollo, minnesanteckningar."]
 		
             var cards = document.querySelectorAll('.card');
             [...cards].forEach((card)=>{
