--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -163,7 +163,7 @@
 		
     	</script></div>
 
-	<img src = "/bilder/tarot/tarot logga.png" id = "banner" style = "width: clamp(0px,100%,700px); height: auto; margin-left: auto; margin-right: auto; display: block;"></img>
+	<img src = "/bilder/tarot-2026/tarot logga.webp" id = "banner" style = "width: clamp(0px,100%,700px); height: auto; margin-left: auto; margin-right: auto; display: block;"></img>
 	<script>
 		function detectMob() {
 		    const toMatch = [
