--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -324,6 +324,7 @@
 		  title: "TAROTMASKINEN",
 		  text: "bli spådd",
 		  url: "https://gaffel.nu/tarot",
+		  files: "/bilder/tarot-2026/" + b + ".png";
 		};
 		
 		const btn = document.querySelector("button");
