--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -299,7 +299,7 @@
 
                   if(flip){
                       var i = getRandomInt(22);
-                      var b = bild[i]
+                      const b = bild[i]
 		      var t = text[i]
 
 		      var g = gör[i]
