--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -286,7 +286,12 @@
 				  "Tredagarsstubb, delikatesser, anglicismer.",
 				  "Carola, hunddagis, permanenta.",
 				  "Bindestreck, kollo, minnesanteckningar."]
-		
+
+			ordning = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22]
+			ordning.sort(() => Math.random() - 0.5)
+
+			console.log(ordning)
+			
             var cards = document.querySelectorAll('.card');
             [...cards].forEach((card)=>{
               card.addEventListener( 'click', function() {
