--- a/tarot-2026.html
+++ b/tarot-2026.html
@@ -99,9 +99,13 @@
             .kort{
                 width: 100%;
                 height: 100%;
-		-webkit-user-select: none; /* Safari */
-		-ms-user-select: none; /* IE 10 and IE 11 */
-		user-select: none;
+				  user-drag: none;  
+			   user-select: none;
+			   -moz-user-select: none;
+			   -webkit-user-drag: none;
+			   -webkit-user-select: none;
+			   -ms-user-select: none;
+				
             }
             
             .card.is-flipped {
