--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 		
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
 				
-				<div style = "font-family: georgia; color: white; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> Sveriges farligaste popkulturmagasin, av och för kulturmedelklassen. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Ansiktet utåt: Albin G Carlsson<br>Ellas kille: Elias Rågholm<br>Nojig: Love Wickelgren Svensby<br>PR: Elsa Bolander<br><br>Kungliga slottet, 107 70 Stockholm<br>
+				<div style = "font-family: georgia; color: white; width: 95%;  margin-bottom: 7%;	${text_style_preamble}"> Vi är pop. <br><br>Redaktionen:<br>Chefredaktör: Nils Hagberg<br>Ansiktet utåt: Albin G Carlsson<br>Ansiktet inåt: Elias Rågholm<br>Ansiktet uppåt: Love Wickelgren Svensby<br>Ansiktet hitåt: Elsa Bolander<br>Ansiktet ditåt: Pontus Ohlson<br><br>Kungliga slottet, 107 70 Stockholm<br>
 				<a href="mailto:gaffel.magasin@gmail.com" style = "color: #FFFEF7FF">gaffel.magasin@gmail.com</a></div>
     				
 				<div style = "display: inline;">
