--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<!--<div id="reklam_banner"></div>
+			<div id="reklam_banner"></div>
 			<script>
 			var new_html = `<a href = "/tarot-2026">`
 			
@@ -319,9 +319,9 @@
 			}
 			new_html += "</a>"
 			document.getElementById("reklam_banner").innerHTML = new_html;
-			</script>-->
+			</script>
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/att-publicera',isMobile)</script></div>
+			<!--<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/att-publicera',isMobile)</script></div>-->
 			
 
 			<div style = "background: black; width: 100%;">
