--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
+
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/vietnam',isMobile)</script></div>
 			
 			<div id="reklam_banner"></div>
 			<script>
@@ -320,9 +322,7 @@
 			new_html += "</a>"
 			document.getElementById("reklam_banner").innerHTML = new_html;
 			</script>
-			
-			<!--<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/att-publicera',isMobile)</script></div>-->
-			
+
 
 			<div style = "background: black; width: 100%;">
 			</div>
@@ -387,9 +387,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main97'><script>draw_article_button('main97','2026/vietnam',isMobile)</script></div>
 			<div id = 'main96'><script>draw_article_button('main96','2025/att-publicera',isMobile)</script></div>
 			<div id = 'main95'><script>draw_article_button('main95','2025/uppesittarkväll-på-göteborgs-central',isMobile)</script></div>
-			<div id = 'main94'><script>draw_article_button('main94','2025/work-wear-fiction',isMobile)</script></div>	
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
 			<div id = 'cos'><script>draw_article_button('cos','2025/cos-näktergal-på-lokal',isMobile)</script></div>
@@ -403,6 +403,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main94'><script>draw_article_button('main94','2025/work-wear-fiction',isMobile)</script></div>	
 			<div id = 'main93'><script>draw_article_button('main93','2025/bruce-springsteen',isMobile)</script></div>
 			<div id = 'main92'><script>draw_article_button('main92','2025/int-fred-soila',isMobile)</script></div>	
 			<div id = 'main91'><script>draw_article_button('main91','2025/slam-poetry',isMobile)</script></div>
