--- a/index.html
+++ b/index.html
@@ -393,8 +393,10 @@
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
 			<div id = 'cos'><script>draw_article_button('cos','2026/cos-kinsugi-diskotek',isMobile)</script></div>
+			<div style = "display: grid;">
 			<a class = 'artikel_knapp' href='/artikel?=2025/cos-näktergal-på-lokal'>C&S: Näktergal på lokal</a>	
-			
+			</div>
+				
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-dec',isMobile)</script></div>
 			<div style = "display: grid;">
