--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
 			<div id = 'cos'><script>draw_article_button('cos','2026/cos-kinsugi-diskotek',isMobile)</script></div>
-			<div style = "display: grid;">
+			<div style = "display: grid; margin-top: 10px;">
 			<a class = 'artikel_knapp' href='/artikel?=2025/cos-näktergal-på-lokal'>C&S: Näktergal på lokal</a>	
 			</div>
 				
