--- a/index.html
+++ b/index.html
@@ -303,9 +303,6 @@
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 
 			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2026/vietnam',isMobile)</script></div>
-			
-			
-
 
 			<div style = "background: black; width: 100%;">
 			</div>
@@ -370,6 +367,7 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main98'><script>draw_article_button('main98','2026/originalspråk',isMobile)</script></div>
 			<div id = 'main97'><script>draw_article_button('main97','2026/vietnam',isMobile)</script></div>
 			<div id="reklam_banner"></div>
 			<script>
@@ -388,8 +386,7 @@
 			}
 			new_html += "</a>"
 			document.getElementById("reklam_banner").innerHTML = new_html;
-			</script>
-			<div id = 'main96'><script>draw_article_button('main96','2025/att-publicera',isMobile)</script></div>			
+			</script>		
 			
 			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
 			<div id = 'cos'><script>draw_article_button('cos','2026/cos-kinsugi-diskotek',isMobile)</script></div>
@@ -406,6 +403,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main96'><script>draw_article_button('main96','2025/att-publicera',isMobile)</script></div>	
 			<div id = 'main95'><script>draw_article_button('main95','2025/uppesittarkväll-på-göteborgs-central',isMobile)</script></div>
 			<div id = 'main94'><script>draw_article_button('main94','2025/work-wear-fiction',isMobile)</script></div>	
 			<div id = 'main93'><script>draw_article_button('main93','2025/bruce-springsteen',isMobile)</script></div>
