--- a/artikel.html
+++ b/artikel.html
@@ -239,9 +239,9 @@
 
 	  <script src = "scripts_ab.js"></script>
 	  <div style = "background: #001015FF; padding-top: 30px;">
-		<div id = 'rec1'><script>draw_article_button('rec1','2025/borås-tur-och-retur',isMobile,false)</script></div>	
-		<div id = 'rec2'><script>draw_article_button('rec2','2025/inne-ute-dec',isMobile,false)</script></div>	
-		<div id = 'rec3'><script>draw_article_button('rec3','2025/cos-näktergal-på-lokal',isMobile,false)</script></div>
+		<div id = 'rec1'><script>draw_article_button('rec1','2026/vietnam',isMobile,false)</script></div>	
+		<div id = 'rec2'><script>draw_article_button('rec2','2025/att-publicera',isMobile,false)</script></div>	
+		<div id = 'rec3'><script>draw_article_button('rec3','2026/cos-kinsugi-diskotek',isMobile,false)</script></div>
 	  </div>
         </div>
 
